# cmake_learn

./: README.md
01_hello/: CMakeLists.txt  hello.cc
02_project/: build.sh  runhello.sh
03_lib/lib/: CMakeLists.txt  hello.cc  hello.h
